--- a/my-portfolio-react/src/css/Navbar.css
+++ b/my-portfolio-react/src/css/Navbar.css
@@ -1,10 +1,10 @@
 .navbar {
-    background-color: #000000;
+    background-color: #0e1017;
     padding: 1rem 2rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 4px rgba(44, 42, 42, 0.974);
   }
   
   .navbar-brand {
@@ -25,7 +25,7 @@
   }
   
   .nav-link:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(255, 255, 255, 0.301);
   }
   
   @media (max-width: 768px) {
