--- a/my-portfolio-react/src/css/Favorites.css
+++ b/my-portfolio-react/src/css/Favorites.css
@@ -8,7 +8,7 @@
     margin-bottom: 2rem;
     text-align: center;
     font-size: 2.5rem;
-    color: #ffffff;
+    color:rgba(136, 0, 255, 0.54);
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
   }
   
